--- a/index.html
+++ b/index.html
@@ -200,8 +200,7 @@
 		}
 
 		var czmlDataArray = [];
-		czmlDataArray[0] = new czmlData("シカ・イノシシ・カモシカ", 'data/czml/shika.czml');
-		czmlDataArray[1] = new czmlData("ネコ・イヌあ", 'data/czml/neko.czml');
+		czmlDataArray[] = new czmlData("淵野辺のオススメラーメン店", 'data/czml/neko.czml');
 		
 		//レイヤ切り替えメニュー作成
 
