--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 		}
 
 		var czmlDataArray = [];
-		czmlDataArray[] = new czmlData("淵野辺のオススメラーメン店", 'data/czml/neko.czml');
+		czmlDataArray[0] = new czmlData("オススメラーメン店", 'data/czml/neko.czml');
 		
 		//レイヤ切り替えメニュー作成
 
